// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginMixin Checks for a default path: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin checks for a SAML url: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin getComponentPropsAndEvents ConfirmationCallback sets ConfirmationCallback callbackSpecificProps to display link variant when the current stage is showing pushChallengeNumber: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (11)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin getComponentPropsAndEvents ConfirmationCallback sets ConfirmationCallback callbackSpecificProps to display primary variant when the current stage is not showing pushChallengeNumber: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (12)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin getComponentPropsAndEvents PollingWaitCallback does not set callbackSpecificProps to hide the callback content when the current stage is not showing pushChallengeNumber: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (10)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin getComponentPropsAndEvents PollingWaitCallback sets PollingWaitCallback callbackSpecificProps to hide the callback content when the current stage is showing pushChallengeNumber: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (9)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin getComponentPropsAndEvents PushChallengeNumber sets PushChallengeNumber callbackSpecificProps to show a push message when the current stage is showing pushChallengeNumber: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (13)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin validateGoto endpoint envocation variations environment variable, VUE_APP_ALIGN_GOTO_PRECEDENCE, is set to false sets the validateGoto payload with the goto url param if the isGotoOnFail function param is false: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (6)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin validateGoto endpoint envocation variations environment variable, VUE_APP_ALIGN_GOTO_PRECEDENCE, is set to false sets the validateGoto payload with the gotoOnFail url param if the isGotoOnFail function param is true: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (7)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin validateGoto endpoint envocation variations environment variable, VUE_APP_ALIGN_GOTO_PRECEDENCE, is set to false sets the validateGoto payload with the url function param if the isGotoOnFail function param is false and the goto url param does not exist: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (8)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin validateGoto endpoint envocation variations environment variable, VUE_APP_ALIGN_GOTO_PRECEDENCE, is set to true sets the validateGoto payload with the gotoOnFail url param if the isGotoOnFail function param is true: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (5)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`LoginMixin validateGoto endpoint envocation variations environment variable, VUE_APP_ALIGN_GOTO_PRECEDENCE, is set to true sets the validateGoto payload with the url function param if the isGotoOnFail function param is false: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (4)",
    "
",
    " at <Anonymous",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
